# web-crawler

./: .gitignore  README.md  analyze_graph.py  crawler.py  pagerank_analysis.py  pyproject.toml  test_performance.sh
src/: pagerank_analysis.py  test_performance.sh
