[project]
name = "web-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "bs4>=0.0.2",
    "lxml>=5.4.0",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "pyyaml>=6.0.2",
    "scipy>=1.15.2",
]
